Closed Bug 869026 Opened 12 years ago Closed 12 years ago

GLContext::GetTexImage crashes when GLContext::mScreen is null

Categories

(Core :: Graphics, defect)

23 Branch
x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla23

People

(Reporter: nical, Assigned: nical)

Details

Attachments

(1 file)

It looks like in GLContext::GuaranteeResolve we should only call AssureBlitted on mScreen if mScreen is not null.
Attachment #746081 - Flags: review?(jgilbert) → review+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: