Bug 869026 - Fix GLContext::GetTexImage crash when GLContext::mScreen is null. r=jgibert